--- a/imp.ipynb
+++ b/imp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 43,
    "id": "e6b0b55c",
    "metadata": {},
    "outputs": [],
@@ -22,20 +22,21 @@
     "\n",
     "* dst: Host contactado\n",
     "* response: True si se obtuvo respuesta; False en caso contrario\n",
-    "* rtt_us: RTT en microsegundos (None si no se obtuvo respuesta)\n",
+    "* rtt_us: RTT en milisegundos (None si no se obtuvo respuesta)\n",
     "* len: Longitud del paquete recibido (None si no se obtuvo respuesta)\n",
     "* ttl: Time to live del paquete recibido (None si no se obtuvo respuesta)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "b2542d34",
    "metadata": {},
    "outputs": [],
    "source": [
     "def ping(host): \n",
     "\n",
+    "    # Diccionario de códigos ICMP para respuestas de tipo 3 (Destino inalcanzable)\n",
     "    codigos = {\n",
     "        0: \"Red de destino inalcanzable\",\n",
     "        1: \"Host de destino inalcanzable\",\n",
@@ -48,38 +49,43 @@
     "    data = {\n",
     "        \"dst\": host,\n",
     "        \"response_type\": None,\n",
-    "        \"rtt_us\": None,\n",
+    "        \"rtt_ms\": None,\n",
     "        \"len\": None,\n",
     "        \"ttl\": None\n",
     "    }\n",
     "    \n",
     "    print(f\"Pinging {host}...\")\n",
+    "\n",
     "    packet = IP(dst=host)/ICMP(type=8) # Echo Request\n",
+    "    \n",
     "    inicio = time.time()\n",
     "    response = sr1(packet, timeout=10, verbose=False) # sr1: envío y espero una sola respuesta\n",
     "    fin = time.time()\n",
     "    \n",
     "    if response:\n",
+    "\n",
     "        icmp_layer = response.getlayer(ICMP)\n",
     "\n",
-    "        if response.type == 3: # Si la respuesta es un destino inalcanzable\n",
-    "            code = icmp_layer.code\n",
+    "        code = icmp_layer.code\n",
+    "\n",
+    "        rtt_ms = (fin - inicio) * 1000 # RTT en milisegundos\n",
+    "        data[\"rtt_ms\"] = rtt_ms\n",
+    "        data[\"len\"] = response.len\n",
+    "        data[\"ttl\"] = response.ttl\n",
+    "        data[\"response_type\"] = response.type\n",
+    "\n",
+    "        if response.type == 3: \n",
     "            print(f\"Destino {host} inalcanzable: \" + codigos[code])\n",
-    "            data[\"response_type\"] = 3\n",
     "        \n",
     "        elif response.type == 0: # Si la respuesta es echo reply\n",
-    "            rtt_mcs = (fin - inicio) * 1000000 \n",
-    "            print(f\"Respuesta recibida de {host}\")\n",
-    "            data[\"response_type\"] = 0\n",
-    "            data[\"rtt_us\"] = rtt_mcs\n",
-    "            data[\"len\"] = response.len\n",
-    "            data[\"ttl\"] = response.ttl\n",
+    "            print(f\"Echo-reply recibida de {host}\")\n",
     "\n",
     "        else:\n",
     "            print(f\"Respuesta ICMP recibida de tipo {response.type}, código {icmp_layer.code}\")\n",
-    "            data[\"response_type\"] = response.type\n",
+    "\n",
     "    else:\n",
     "        print(f\"No se recibió respuesta de {host}\")\n",
+    "\n",
     "    return data"
    ]
   },
@@ -93,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 45,
    "id": "44f14bbb",
    "metadata": {},
    "outputs": [
@@ -102,7 +108,7 @@
      "output_type": "stream",
      "text": [
       "Pinging utdt.edu.ar...\n",
-      "Respuesta recibida de utdt.edu.ar\n"
+      "Echo-reply recibida de utdt.edu.ar\n"
      ]
     },
     {
@@ -110,12 +116,12 @@
       "text/plain": [
        "{'dst': 'utdt.edu.ar',\n",
        " 'response_type': 0,\n",
-       " 'rtt_us': 35920.143127441406,\n",
+       " 'rtt_ms': 12.863874435424805,\n",
        " 'len': 28,\n",
-       " 'ttl': 56}"
+       " 'ttl': 55}"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 46,
    "id": "b154d3de",
    "metadata": {},
    "outputs": [],
@@ -164,13 +170,13 @@
     "\n",
     "        if resultado[\"response_type\"] == 0: \n",
     "            received_packets += 1\n",
-    "            total_rtt += resultado[\"rtt_us\"]\n",
-    "            min_rtt = min(min_rtt, resultado[\"rtt_us\"])\n",
-    "            max_rtt = max(max_rtt, resultado[\"rtt_us\"])\n",
-    "            lista_rtts.append(resultado[\"rtt_us\"])\n",
+    "            total_rtt += resultado[\"rtt_ms\"]\n",
+    "            min_rtt = min(min_rtt, resultado[\"rtt_ms\"])\n",
+    "            max_rtt = max(max_rtt, resultado[\"rtt_ms\"])\n",
+    "            lista_rtts.append(resultado[\"rtt_ms\"])\n",
     "\n",
     "        else:\n",
-    "            lost_packets += 1\n",
+    "            lost_packets += 1 # Si el destino es inalcanzable o no se recibe respuesta, el ping se considera perdido\n",
     "    \n",
     "    if received_packets > 0:\n",
     "        average_rtt = total_rtt / received_packets\n",
@@ -199,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 47,
    "id": "25497061",
    "metadata": {},
    "outputs": [
@@ -208,20 +214,20 @@
      "output_type": "stream",
      "text": [
       "Pinging cuhk.edu.cn...\n",
-      "Respuesta recibida de cuhk.edu.cn\n",
-      "{'dst': 'cuhk.edu.cn', 'response_type': 0, 'rtt_us': 379474.8783111572, 'len': 28, 'ttl': 112}\n",
+      "Echo-reply recibida de cuhk.edu.cn\n",
+      "{'dst': 'cuhk.edu.cn', 'response_type': 0, 'rtt_ms': 339.6496772766113, 'len': 28, 'ttl': 112}\n",
       "Pinging mit.edu...\n",
-      "Respuesta recibida de mit.edu\n",
-      "{'dst': 'mit.edu', 'response_type': 0, 'rtt_us': 211778.1639099121, 'len': 28, 'ttl': 48}\n",
+      "Echo-reply recibida de mit.edu\n",
+      "{'dst': 'mit.edu', 'response_type': 0, 'rtt_ms': 44.18611526489258, 'len': 28, 'ttl': 50}\n",
       "Pinging ie.edu...\n",
-      "Respuesta recibida de ie.edu\n",
-      "{'dst': 'ie.edu', 'response_type': 0, 'rtt_us': 10505.914688110352, 'len': 28, 'ttl': 248}\n",
+      "Echo-reply recibida de ie.edu\n",
+      "{'dst': 'ie.edu', 'response_type': 0, 'rtt_ms': 12.932300567626953, 'len': 28, 'ttl': 246}\n",
+      "Pinging sydney.edu.au...\n",
+      "Echo-reply recibida de sydney.edu.au\n",
+      "{'dst': 'sydney.edu.au', 'response_type': 0, 'rtt_ms': 329.12492752075195, 'len': 28, 'ttl': 107}\n",
       "Pinging alexu.edu.eg...\n",
       "No se recibió respuesta de alexu.edu.eg\n",
-      "{'dst': 'alexu.edu.eg', 'response_type': None, 'rtt_us': None, 'len': None, 'ttl': None}\n",
-      "Pinging sydney.edu.au...\n",
-      "Respuesta recibida de sydney.edu.au\n",
-      "{'dst': 'sydney.edu.au', 'response_type': 0, 'rtt_us': 314929.2469024658, 'len': 28, 'ttl': 111}\n"
+      "{'dst': 'alexu.edu.eg', 'response_type': None, 'rtt_ms': None, 'len': None, 'ttl': None}\n"
      ]
     },
     {
@@ -236,14 +242,14 @@
        " 'received_packets': 4,\n",
        " 'lost_packets': 1,\n",
        " 'loss_percentage': 0.2,\n",
-       " 'total_rtt': 916688.2038116455,\n",
-       " 'min_rtt': 10505.914688110352,\n",
-       " 'max_rtt': 379474.8783111572,\n",
-       " 'average_rtt': 229172.05095291138,\n",
-       " 'sd_rtt': 161309.91189266092}"
+       " 'total_rtt': 725.8930206298828,\n",
+       " 'min_rtt': 12.932300567626953,\n",
+       " 'max_rtt': 339.6496772766113,\n",
+       " 'average_rtt': 181.4732551574707,\n",
+       " 'sd_rtt': 177.08247515402383}"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
