--- a/imp.ipynb
+++ b/imp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 111,
    "id": "e6b0b55c",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 112,
    "id": "b2542d34",
    "metadata": {},
    "outputs": [],
@@ -90,73 +90,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "12659f40",
-   "metadata": {},
-   "source": [
-    "Probamos contactar a utdt.edu.ar"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "44f14bbb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pinging utdt.edu.ar...\n",
-      "Echo-reply recibida de utdt.edu.ar\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'dst': 'utdt.edu.ar',\n",
-       " 'response_type': 0,\n",
-       " 'rtt_ms': 12.863874435424805,\n",
-       " 'len': 28,\n",
-       " 'ttl': 55}"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ping(\"utdt.edu.ar\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e6eabf03",
-   "metadata": {},
-   "source": [
-    "Ahora, creamos una función que recibe un set de destinos a contactar. Devuelve un diccionario que contiene:\n",
-    "* Cantidad de paquetes enviados\n",
-    "* Cantidad de paquetes recibidos\n",
-    "* Cantidad de paquetes perdidos\n",
-    "* Porcentaje de paquetes perdidos\n",
-    "* RTT promedio\n",
-    "* RTT mínimo\n",
-    "* RTT máximo\n",
-    "* Desvío estándar del RTT promedio\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 122,
    "id": "b154d3de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ping_multiple_hosts(hosts):\n",
+    "def ping_multiple(host, cantidad_paquetes):\n",
     "\n",
     "    res = dict()\n",
-    "    sent_packets = len(hosts)\n",
+    "    sent_packets = cantidad_paquetes\n",
     "    received_packets = 0\n",
     "    lost_packets = 0\n",
     "    total_rtt = 0\n",
@@ -164,9 +107,11 @@
     "    max_rtt = float('-inf')\n",
     "    lista_rtts = []\n",
     "    \n",
-    "    for host in hosts:\n",
+    "    for i in range(cantidad_paquetes):\n",
+    "\n",
     "        resultado = ping(host)\n",
-    "        print(resultado)\n",
+    "\n",
+    "        # print(resultado) # podemos descomentar para ver el resultado de cada ping\n",
     "\n",
     "        if resultado[\"response_type\"] == 0: \n",
     "            received_packets += 1\n",
@@ -177,20 +122,17 @@
     "\n",
     "        else:\n",
     "            lost_packets += 1 # Si el destino es inalcanzable o no se recibe respuesta, el ping se considera perdido\n",
-    "    \n",
-    "    if received_packets > 0:\n",
-    "        average_rtt = total_rtt / received_packets\n",
     "\n",
-    "    res[\"hosts\"] = hosts\n",
-    "    res[\"sent_packets\"] = sent_packets\n",
-    "    res[\"received_packets\"] = received_packets\n",
-    "    res[\"lost_packets\"] = lost_packets\n",
-    "    res[\"loss_percentage\"] = (lost_packets / sent_packets) \n",
-    "    res[\"total_rtt\"] = total_rtt\n",
-    "    res[\"min_rtt\"] = min_rtt if min_rtt != float('inf') else None\n",
-    "    res[\"max_rtt\"] = max_rtt if max_rtt != float('-inf') else None\n",
-    "    res[\"average_rtt\"] = average_rtt if received_packets > 0 else None\n",
-    "    res[\"sd_rtt\"] = statistics.stdev(lista_rtts) if len(lista_rtts) > 1 else None\n",
+    "    res[\"host\"] = host\n",
+    "    res[\"Paquetes enviados\"] = sent_packets\n",
+    "    res[\"Paquetes recibidos\"] = received_packets\n",
+    "    res[\"Paquetes perdidos\"] = lost_packets\n",
+    "    res[\"Porcentaje de paquetes perdidos\"] = (lost_packets / sent_packets) \n",
+    "    res[\"RTT total\"] = total_rtt if received_packets > 0 else None\n",
+    "    res[\"RTT mínimo\"] = min_rtt if min_rtt != float('inf') else None\n",
+    "    res[\"RTT máximo\"] = max_rtt if max_rtt != float('-inf') else None\n",
+    "    res[\"RTT promedio\"] = total_rtt / received_packets if received_packets > 0 else None\n",
+    "    res[\"Desvió estándar del RTT promedio\"] = statistics.stdev(lista_rtts) if len(lista_rtts) > 1 else None\n",
     "    \n",
     "    return res"
    ]
@@ -200,12 +142,12 @@
    "id": "c1b20695",
    "metadata": {},
    "source": [
-    "Contactamos a 5 universidades de continentes distintos"
+    "Contactamos a 5 universidades de continentes distintos. También contactamos a UTDT para ver las diferencias."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "25497061",
    "metadata": {},
    "outputs": [
@@ -213,52 +155,275 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pinging cuhk.edu.cn...\n",
-      "Echo-reply recibida de cuhk.edu.cn\n",
-      "{'dst': 'cuhk.edu.cn', 'response_type': 0, 'rtt_ms': 339.6496772766113, 'len': 28, 'ttl': 112}\n",
-      "Pinging mit.edu...\n",
-      "Echo-reply recibida de mit.edu\n",
-      "{'dst': 'mit.edu', 'response_type': 0, 'rtt_ms': 44.18611526489258, 'len': 28, 'ttl': 50}\n",
-      "Pinging ie.edu...\n",
-      "Echo-reply recibida de ie.edu\n",
-      "{'dst': 'ie.edu', 'response_type': 0, 'rtt_ms': 12.932300567626953, 'len': 28, 'ttl': 246}\n",
-      "Pinging sydney.edu.au...\n",
-      "Echo-reply recibida de sydney.edu.au\n",
-      "{'dst': 'sydney.edu.au', 'response_type': 0, 'rtt_ms': 329.12492752075195, 'len': 28, 'ttl': 107}\n",
-      "Pinging alexu.edu.eg...\n",
-      "No se recibió respuesta de alexu.edu.eg\n",
-      "{'dst': 'alexu.edu.eg', 'response_type': None, 'rtt_ms': None, 'len': None, 'ttl': None}\n"
+      "Pinging utdt.edu.ar...\n",
+      "Echo-reply recibida de utdt.edu.ar\n",
+      "{'dst': 'utdt.edu.ar', 'response_type': 0, 'rtt_ms': 16.39389991760254, 'len': 28, 'ttl': 55}\n",
+      "Pinging utdt.edu.ar...\n",
+      "Echo-reply recibida de utdt.edu.ar\n",
+      "{'dst': 'utdt.edu.ar', 'response_type': 0, 'rtt_ms': 9.383440017700195, 'len': 28, 'ttl': 55}\n",
+      "Pinging utdt.edu.ar...\n",
+      "Echo-reply recibida de utdt.edu.ar\n",
+      "{'dst': 'utdt.edu.ar', 'response_type': 0, 'rtt_ms': 10.444164276123047, 'len': 28, 'ttl': 55}\n",
+      "Pinging utdt.edu.ar...\n",
+      "Echo-reply recibida de utdt.edu.ar\n",
+      "{'dst': 'utdt.edu.ar', 'response_type': 0, 'rtt_ms': 6.869792938232422, 'len': 28, 'ttl': 55}\n",
+      "Pinging utdt.edu.ar...\n",
+      "Echo-reply recibida de utdt.edu.ar\n",
+      "{'dst': 'utdt.edu.ar', 'response_type': 0, 'rtt_ms': 8.04591178894043, 'len': 28, 'ttl': 55}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'hosts': {'alexu.edu.eg',\n",
-       "  'cuhk.edu.cn',\n",
-       "  'ie.edu',\n",
-       "  'mit.edu',\n",
-       "  'sydney.edu.au'},\n",
-       " 'sent_packets': 5,\n",
-       " 'received_packets': 4,\n",
-       " 'lost_packets': 1,\n",
-       " 'loss_percentage': 0.2,\n",
-       " 'total_rtt': 725.8930206298828,\n",
-       " 'min_rtt': 12.932300567626953,\n",
-       " 'max_rtt': 339.6496772766113,\n",
-       " 'average_rtt': 181.4732551574707,\n",
-       " 'sd_rtt': 177.08247515402383}"
+       "{'host': 'utdt.edu.ar',\n",
+       " 'Paquetes enviados': 5,\n",
+       " 'Paquetes recibidos': 5,\n",
+       " 'Paquetes perdidos': 0,\n",
+       " 'Porcentaje de paquetes perdidos': 0.0,\n",
+       " 'RTT total': 51.13720893859863,\n",
+       " 'RTT mínimo': 6.869792938232422,\n",
+       " 'RTT máximo': 16.39389991760254,\n",
+       " 'RTT promedio': 10.227441787719727,\n",
+       " 'Desvió estándar del RTT promedio': 3.7019384254877568}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "destinos = {\"mit.edu\", \"ie.edu\", \"sydney.edu.au\", \"cuhk.edu.cn\", \"alexu.edu.eg\"}\n",
-    "\n",
-    "ping_multiple_hosts(destinos)"
+    "ping_multiple('utdt.edu.ar', 5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "aca12d28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pinging mit.edu...\n",
+      "Echo-reply recibida de mit.edu\n",
+      "Pinging mit.edu...\n",
+      "Echo-reply recibida de mit.edu\n",
+      "Pinging mit.edu...\n",
+      "Echo-reply recibida de mit.edu\n",
+      "Pinging mit.edu...\n",
+      "Echo-reply recibida de mit.edu\n",
+      "Pinging mit.edu...\n",
+      "Echo-reply recibida de mit.edu\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'host': 'mit.edu',\n",
+       " 'Paquetes enviados': 5,\n",
+       " 'Paquetes recibidos': 5,\n",
+       " 'Paquetes perdidos': 0,\n",
+       " 'Porcentaje de paquetes perdidos': 0.0,\n",
+       " 'RTT total': 183.41684341430664,\n",
+       " 'RTT mínimo': 34.403085708618164,\n",
+       " 'RTT máximo': 41.126251220703125,\n",
+       " 'RTT promedio': 36.68336868286133,\n",
+       " 'Desvió estándar del RTT promedio': 2.595727034702454}"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ping_multiple('mit.edu', 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "01964b2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pinging ie.edu...\n",
+      "Echo-reply recibida de ie.edu\n",
+      "Pinging ie.edu...\n",
+      "Echo-reply recibida de ie.edu\n",
+      "Pinging ie.edu...\n",
+      "Echo-reply recibida de ie.edu\n",
+      "Pinging ie.edu...\n",
+      "Echo-reply recibida de ie.edu\n",
+      "Pinging ie.edu...\n",
+      "Echo-reply recibida de ie.edu\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'host': 'ie.edu',\n",
+       " 'Paquetes enviados': 5,\n",
+       " 'Paquetes recibidos': 5,\n",
+       " 'Paquetes perdidos': 0,\n",
+       " 'Porcentaje de paquetes perdidos': 0.0,\n",
+       " 'RTT total': 43.84493827819824,\n",
+       " 'RTT mínimo': 7.491111755371094,\n",
+       " 'RTT máximo': 10.917186737060547,\n",
+       " 'RTT promedio': 8.768987655639648,\n",
+       " 'Desvió estándar del RTT promedio': 1.3221477679720761}"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ping_multiple('ie.edu', 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "e3bb0ec7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pinging sydney.edu.au...\n",
+      "Echo-reply recibida de sydney.edu.au\n",
+      "Pinging sydney.edu.au...\n",
+      "Echo-reply recibida de sydney.edu.au\n",
+      "Pinging sydney.edu.au...\n",
+      "Echo-reply recibida de sydney.edu.au\n",
+      "Pinging sydney.edu.au...\n",
+      "Echo-reply recibida de sydney.edu.au\n",
+      "Pinging sydney.edu.au...\n",
+      "Echo-reply recibida de sydney.edu.au\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'host': 'sydney.edu.au',\n",
+       " 'Paquetes enviados': 5,\n",
+       " 'Paquetes recibidos': 5,\n",
+       " 'Paquetes perdidos': 0,\n",
+       " 'Porcentaje de paquetes perdidos': 0.0,\n",
+       " 'RTT total': 1563.9467239379883,\n",
+       " 'RTT mínimo': 309.9353313446045,\n",
+       " 'RTT máximo': 314.42880630493164,\n",
+       " 'RTT promedio': 312.78934478759766,\n",
+       " 'Desvió estándar del RTT promedio': 1.7810455006824155}"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ping_multiple('sydney.edu.au', 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "cf0b1573",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pinging cuhk.edu.cn...\n",
+      "No se recibió respuesta de cuhk.edu.cn\n",
+      "Pinging cuhk.edu.cn...\n",
+      "Echo-reply recibida de cuhk.edu.cn\n",
+      "Pinging cuhk.edu.cn...\n",
+      "Echo-reply recibida de cuhk.edu.cn\n",
+      "Pinging cuhk.edu.cn...\n",
+      "Echo-reply recibida de cuhk.edu.cn\n",
+      "Pinging cuhk.edu.cn...\n",
+      "Echo-reply recibida de cuhk.edu.cn\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'host': 'cuhk.edu.cn',\n",
+       " 'Paquetes enviados': 5,\n",
+       " 'Paquetes recibidos': 4,\n",
+       " 'Paquetes perdidos': 1,\n",
+       " 'Porcentaje de paquetes perdidos': 0.2,\n",
+       " 'RTT total': 1330.493688583374,\n",
+       " 'RTT mínimo': 331.0728073120117,\n",
+       " 'RTT máximo': 335.5364799499512,\n",
+       " 'RTT promedio': 332.6234221458435,\n",
+       " 'Desvió estándar del RTT promedio': 2.0086965350032986}"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ping_multiple('cuhk.edu.cn', 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "5c3e294f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pinging alexu.edu.eg...\n",
+      "No se recibió respuesta de alexu.edu.eg\n",
+      "Pinging alexu.edu.eg...\n",
+      "No se recibió respuesta de alexu.edu.eg\n",
+      "Pinging alexu.edu.eg...\n",
+      "No se recibió respuesta de alexu.edu.eg\n",
+      "Pinging alexu.edu.eg...\n",
+      "No se recibió respuesta de alexu.edu.eg\n",
+      "Pinging alexu.edu.eg...\n",
+      "No se recibió respuesta de alexu.edu.eg\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'host': 'alexu.edu.eg',\n",
+       " 'Paquetes enviados': 5,\n",
+       " 'Paquetes recibidos': 0,\n",
+       " 'Paquetes perdidos': 5,\n",
+       " 'Porcentaje de paquetes perdidos': 1.0,\n",
+       " 'RTT total': None,\n",
+       " 'RTT mínimo': None,\n",
+       " 'RTT máximo': None,\n",
+       " 'RTT promedio': None,\n",
+       " 'Desvió estándar del RTT promedio': None}"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ping_multiple('alexu.edu.eg', 5)"
    ]
   }
  ],
