cambio la universidad africana

--- a/imp.ipynb
+++ b/imp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 1,
    "id": "e6b0b55c",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 2,
    "id": "b2542d34",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 3,
    "id": "b154d3de",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "25497061",
    "metadata": {},
    "outputs": [
@@ -157,19 +157,14 @@
      "text": [
       "Pinging utdt.edu.ar...\n",
       "Echo-reply recibida de utdt.edu.ar\n",
-      "{'dst': 'utdt.edu.ar', 'response_type': 0, 'rtt_ms': 16.39389991760254, 'len': 28, 'ttl': 55}\n",
       "Pinging utdt.edu.ar...\n",
       "Echo-reply recibida de utdt.edu.ar\n",
-      "{'dst': 'utdt.edu.ar', 'response_type': 0, 'rtt_ms': 9.383440017700195, 'len': 28, 'ttl': 55}\n",
       "Pinging utdt.edu.ar...\n",
       "Echo-reply recibida de utdt.edu.ar\n",
-      "{'dst': 'utdt.edu.ar', 'response_type': 0, 'rtt_ms': 10.444164276123047, 'len': 28, 'ttl': 55}\n",
       "Pinging utdt.edu.ar...\n",
       "Echo-reply recibida de utdt.edu.ar\n",
-      "{'dst': 'utdt.edu.ar', 'response_type': 0, 'rtt_ms': 6.869792938232422, 'len': 28, 'ttl': 55}\n",
       "Pinging utdt.edu.ar...\n",
-      "Echo-reply recibida de utdt.edu.ar\n",
-      "{'dst': 'utdt.edu.ar', 'response_type': 0, 'rtt_ms': 8.04591178894043, 'len': 28, 'ttl': 55}\n"
+      "Echo-reply recibida de utdt.edu.ar\n"
      ]
     },
     {
@@ -180,14 +175,14 @@
        " 'Paquetes recibidos': 5,\n",
        " 'Paquetes perdidos': 0,\n",
        " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 51.13720893859863,\n",
-       " 'RTT mínimo': 6.869792938232422,\n",
-       " 'RTT máximo': 16.39389991760254,\n",
-       " 'RTT promedio': 10.227441787719727,\n",
-       " 'Desvió estándar del RTT promedio': 3.7019384254877568}"
+       " 'RTT total': 96.04215621948242,\n",
+       " 'RTT mínimo': 14.534473419189453,\n",
+       " 'RTT máximo': 33.364057540893555,\n",
+       " 'RTT promedio': 19.208431243896484,\n",
+       " 'Desvió estándar del RTT promedio': 8.016241061224962}"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "id": "aca12d28",
    "metadata": {},
    "outputs": [
@@ -226,14 +221,14 @@
        " 'Paquetes recibidos': 5,\n",
        " 'Paquetes perdidos': 0,\n",
        " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 183.41684341430664,\n",
-       " 'RTT mínimo': 34.403085708618164,\n",
-       " 'RTT máximo': 41.126251220703125,\n",
-       " 'RTT promedio': 36.68336868286133,\n",
-       " 'Desvió estándar del RTT promedio': 2.595727034702454}"
+       " 'RTT total': 232.3911190032959,\n",
+       " 'RTT mínimo': 42.084693908691406,\n",
+       " 'RTT máximo': 53.804636001586914,\n",
+       " 'RTT promedio': 46.47822380065918,\n",
+       " 'Desvió estándar del RTT promedio': 4.650285959168177}"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 6,
    "id": "01964b2e",
    "metadata": {},
    "outputs": [
@@ -272,14 +267,14 @@
        " 'Paquetes recibidos': 5,\n",
        " 'Paquetes perdidos': 0,\n",
        " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 43.84493827819824,\n",
-       " 'RTT mínimo': 7.491111755371094,\n",
-       " 'RTT máximo': 10.917186737060547,\n",
-       " 'RTT promedio': 8.768987655639648,\n",
-       " 'Desvió estándar del RTT promedio': 1.3221477679720761}"
+       " 'RTT total': 84.21874046325684,\n",
+       " 'RTT mínimo': 9.094953536987305,\n",
+       " 'RTT máximo': 29.72102165222168,\n",
+       " 'RTT promedio': 16.843748092651367,\n",
+       " 'Desvió estándar del RTT promedio': 7.757640413584808}"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 7,
    "id": "e3bb0ec7",
    "metadata": {},
    "outputs": [
@@ -318,14 +313,14 @@
        " 'Paquetes recibidos': 5,\n",
        " 'Paquetes perdidos': 0,\n",
        " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 1563.9467239379883,\n",
-       " 'RTT mínimo': 309.9353313446045,\n",
-       " 'RTT máximo': 314.42880630493164,\n",
-       " 'RTT promedio': 312.78934478759766,\n",
-       " 'Desvió estándar del RTT promedio': 1.7810455006824155}"
+       " 'RTT total': 1613.8112545013428,\n",
+       " 'RTT mínimo': 318.9244270324707,\n",
+       " 'RTT máximo': 331.76231384277344,\n",
+       " 'RTT promedio': 322.76225090026855,\n",
+       " 'Desvió estándar del RTT promedio': 5.229950366904474}"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 8,
    "id": "cf0b1573",
    "metadata": {},
    "outputs": [
@@ -345,7 +340,7 @@
      "output_type": "stream",
      "text": [
       "Pinging cuhk.edu.cn...\n",
-      "No se recibió respuesta de cuhk.edu.cn\n",
+      "Echo-reply recibida de cuhk.edu.cn\n",
       "Pinging cuhk.edu.cn...\n",
       "Echo-reply recibida de cuhk.edu.cn\n",
       "Pinging cuhk.edu.cn...\n",
@@ -361,17 +356,17 @@
       "text/plain": [
        "{'host': 'cuhk.edu.cn',\n",
        " 'Paquetes enviados': 5,\n",
-       " 'Paquetes recibidos': 4,\n",
-       " 'Paquetes perdidos': 1,\n",
-       " 'Porcentaje de paquetes perdidos': 0.2,\n",
-       " 'RTT total': 1330.493688583374,\n",
-       " 'RTT mínimo': 331.0728073120117,\n",
-       " 'RTT máximo': 335.5364799499512,\n",
-       " 'RTT promedio': 332.6234221458435,\n",
-       " 'Desvió estándar del RTT promedio': 2.0086965350032986}"
+       " 'Paquetes recibidos': 5,\n",
+       " 'Paquetes perdidos': 0,\n",
+       " 'Porcentaje de paquetes perdidos': 0.0,\n",
+       " 'RTT total': 1670.057773590088,\n",
+       " 'RTT mínimo': 314.96667861938477,\n",
+       " 'RTT máximo': 383.12768936157227,\n",
+       " 'RTT promedio': 334.0115547180176,\n",
+       " 'Desvió estándar del RTT promedio': 28.2241186072276}"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 13,
    "id": "5c3e294f",
    "metadata": {},
    "outputs": [
@@ -390,40 +385,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pinging alexu.edu.eg...\n",
-      "No se recibió respuesta de alexu.edu.eg\n",
-      "Pinging alexu.edu.eg...\n",
-      "No se recibió respuesta de alexu.edu.eg\n",
-      "Pinging alexu.edu.eg...\n",
-      "No se recibió respuesta de alexu.edu.eg\n",
-      "Pinging alexu.edu.eg...\n",
-      "No se recibió respuesta de alexu.edu.eg\n",
-      "Pinging alexu.edu.eg...\n",
-      "No se recibió respuesta de alexu.edu.eg\n"
+      "Pinging uniben.edu...\n",
+      "Echo-reply recibida de uniben.edu\n",
+      "Pinging uniben.edu...\n",
+      "Echo-reply recibida de uniben.edu\n",
+      "Pinging uniben.edu...\n",
+      "Echo-reply recibida de uniben.edu\n",
+      "Pinging uniben.edu...\n",
+      "Echo-reply recibida de uniben.edu\n",
+      "Pinging uniben.edu...\n",
+      "Echo-reply recibida de uniben.edu\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'host': 'alexu.edu.eg',\n",
+       "{'host': 'uniben.edu',\n",
        " 'Paquetes enviados': 5,\n",
-       " 'Paquetes recibidos': 0,\n",
-       " 'Paquetes perdidos': 5,\n",
-       " 'Porcentaje de paquetes perdidos': 1.0,\n",
-       " 'RTT total': None,\n",
-       " 'RTT mínimo': None,\n",
-       " 'RTT máximo': None,\n",
-       " 'RTT promedio': None,\n",
-       " 'Desvió estándar del RTT promedio': None}"
+       " 'Paquetes recibidos': 5,\n",
+       " 'Paquetes perdidos': 0,\n",
+       " 'Porcentaje de paquetes perdidos': 0.0,\n",
+       " 'RTT total': 338.8545513153076,\n",
+       " 'RTT mínimo': 29.7086238861084,\n",
+       " 'RTT máximo': 118.79682540893555,\n",
+       " 'RTT promedio': 67.77091026306152,\n",
+       " 'Desvió estándar del RTT promedio': 38.08522442910583}"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ping_multiple('alexu.edu.eg', 5)"
+    "ping_multiple('uniben.edu', 5)"
    ]
   }
  ],
