--- a/imp.ipynb
+++ b/imp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "e6b0b55c",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "b2542d34",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "b154d3de",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "25497061",
    "metadata": {},
    "outputs": [
@@ -175,14 +175,14 @@
        " 'Paquetes recibidos': 5,\n",
        " 'Paquetes perdidos': 0,\n",
        " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 96.04215621948242,\n",
-       " 'RTT mínimo': 14.534473419189453,\n",
-       " 'RTT máximo': 33.364057540893555,\n",
-       " 'RTT promedio': 19.208431243896484,\n",
-       " 'Desvió estándar del RTT promedio': 8.016241061224962}"
+       " 'RTT total': 492.8760528564453,\n",
+       " 'RTT mínimo': 65.11902809143066,\n",
+       " 'RTT máximo': 125.74291229248047,\n",
+       " 'RTT promedio': 98.57521057128906,\n",
+       " 'Desvió estándar del RTT promedio': 30.527201587399055}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "aca12d28",
    "metadata": {},
    "outputs": [
@@ -221,14 +221,14 @@
        " 'Paquetes recibidos': 5,\n",
        " 'Paquetes perdidos': 0,\n",
        " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 232.3911190032959,\n",
-       " 'RTT mínimo': 42.084693908691406,\n",
-       " 'RTT máximo': 53.804636001586914,\n",
-       " 'RTT promedio': 46.47822380065918,\n",
-       " 'Desvió estándar del RTT promedio': 4.650285959168177}"
+       " 'RTT total': 520.2734470367432,\n",
+       " 'RTT mínimo': 58.95209312438965,\n",
+       " 'RTT máximo': 152.32300758361816,\n",
+       " 'RTT promedio': 104.05468940734863,\n",
+       " 'Desvió estándar del RTT promedio': 41.237935097721476}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "01964b2e",
    "metadata": {},
    "outputs": [
@@ -267,14 +267,14 @@
        " 'Paquetes recibidos': 5,\n",
        " 'Paquetes perdidos': 0,\n",
        " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 84.21874046325684,\n",
-       " 'RTT mínimo': 9.094953536987305,\n",
-       " 'RTT máximo': 29.72102165222168,\n",
-       " 'RTT promedio': 16.843748092651367,\n",
-       " 'Desvió estándar del RTT promedio': 7.757640413584808}"
+       " 'RTT total': 262.9408836364746,\n",
+       " 'RTT mínimo': 19.60587501525879,\n",
+       " 'RTT máximo': 120.11170387268066,\n",
+       " 'RTT promedio': 52.58817672729492,\n",
+       " 'Desvió estándar del RTT promedio': 40.91292658513064}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "e3bb0ec7",
    "metadata": {},
    "outputs": [
@@ -313,14 +313,14 @@
        " 'Paquetes recibidos': 5,\n",
        " 'Paquetes perdidos': 0,\n",
        " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 1613.8112545013428,\n",
-       " 'RTT mínimo': 318.9244270324707,\n",
-       " 'RTT máximo': 331.76231384277344,\n",
-       " 'RTT promedio': 322.76225090026855,\n",
-       " 'Desvió estándar del RTT promedio': 5.229950366904474}"
+       " 'RTT total': 2048.149585723877,\n",
+       " 'RTT mínimo': 342.5297737121582,\n",
+       " 'RTT máximo': 549.3576526641846,\n",
+       " 'RTT promedio': 409.6299171447754,\n",
+       " 'Desvió estándar del RTT promedio': 92.29536654628816}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "cf0b1573",
    "metadata": {},
    "outputs": [
@@ -359,14 +359,14 @@
        " 'Paquetes recibidos': 5,\n",
        " 'Paquetes perdidos': 0,\n",
        " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 1670.057773590088,\n",
-       " 'RTT mínimo': 314.96667861938477,\n",
-       " 'RTT máximo': 383.12768936157227,\n",
-       " 'RTT promedio': 334.0115547180176,\n",
-       " 'Desvió estándar del RTT promedio': 28.2241186072276}"
+       " 'RTT total': 1716.3801193237305,\n",
+       " 'RTT mínimo': 331.2041759490967,\n",
+       " 'RTT máximo': 357.44190216064453,\n",
+       " 'RTT promedio': 343.2760238647461,\n",
+       " 'Desvió estándar del RTT promedio': 13.07432881450729}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "5c3e294f",
    "metadata": {},
    "outputs": [
@@ -405,14 +405,14 @@
        " 'Paquetes recibidos': 5,\n",
        " 'Paquetes perdidos': 0,\n",
        " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 338.8545513153076,\n",
-       " 'RTT mínimo': 29.7086238861084,\n",
-       " 'RTT máximo': 118.79682540893555,\n",
-       " 'RTT promedio': 67.77091026306152,\n",
-       " 'Desvió estándar del RTT promedio': 38.08522442910583}"
+       " 'RTT total': 396.09313011169434,\n",
+       " 'RTT mínimo': 21.183013916015625,\n",
+       " 'RTT máximo': 186.10000610351562,\n",
+       " 'RTT promedio': 79.21862602233887,\n",
+       " 'Desvió estándar del RTT promedio': 63.15631002447692}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,11 +420,57 @@
    "source": [
     "ping_multiple('uniben.edu', 5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "124ce7e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pinging alexu.edu.eg...\n",
+      "No se recibió respuesta de alexu.edu.eg\n",
+      "Pinging alexu.edu.eg...\n",
+      "No se recibió respuesta de alexu.edu.eg\n",
+      "Pinging alexu.edu.eg...\n",
+      "No se recibió respuesta de alexu.edu.eg\n",
+      "Pinging alexu.edu.eg...\n",
+      "No se recibió respuesta de alexu.edu.eg\n",
+      "Pinging alexu.edu.eg...\n",
+      "No se recibió respuesta de alexu.edu.eg\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'host': 'alexu.edu.eg',\n",
+       " 'Paquetes enviados': 5,\n",
+       " 'Paquetes recibidos': 0,\n",
+       " 'Paquetes perdidos': 5,\n",
+       " 'Porcentaje de paquetes perdidos': 1.0,\n",
+       " 'RTT total': None,\n",
+       " 'RTT mínimo': None,\n",
+       " 'RTT máximo': None,\n",
+       " 'RTT promedio': None,\n",
+       " 'Desvió estándar del RTT promedio': None}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ping_multiple('alexu.edu.eg', 5)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "td6",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -438,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
